fix: add @BucketListener support